Feature #15410 In the user notification mechanism, any thumbnails of contributions are now got and set as a StringTemplate variable for the HTML message generation (by StringTemplate).
By taking into account contribution's thumbnail in the user
notification, the user can simply identify the contribution referred by
the notification by its thumbnail.

For delayed user notifications, the core templates are updated to take
into account the available of the thumbnails.

For others templates used in the user notifications by the Silverpeas
applications, they required to be updated for the applications
interested by the thumbnail.